--- a/Aretes.html
+++ b/Aretes.html
@@ -49,21 +49,59 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Aretes" data-price="400">
+        <div class="card" data-name="Aretes forma de frutos" data-price="400">
             <img src="IMG/Aretes/2.jpg" alt="Pulceras para chicas">
-            <h3>Guillo sin formas</h3>
+            <h3>Aretes con forma de frutos</h3>
             <p>Precio: RD$400.00</p>
             <p>Pulsera con diseño de corazón.</p>
             <button onclick="addToCart('Aretes', 400)">Agregar al carrito</button>
         </div>
         <div class="card" data-name="Aretes" data-price="550">
             <img src="IMG/Aretes/3.jpg" alt="Producto 2">
-            <h3>Guillos formas de corazon</h3>
+            <h3>Aretes</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de mariposas.</p>
+            <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
+        </div>
+        <div class="card" data-name="Aretes forma de trebol" data-price="550">
+            <img src="IMG/Aretes/4.jpg" alt="Producto 2">
+            <h3>Aretes con forma de trebol</h3>
             <p>Precio: RD$550.00</p>
             <p>Pulsera con diseño de mariposas.</p>
             <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
         </div>
 
+        <div class="card" data-name="Aretes forma de trebol" data-price="550">
+            <img src="IMG/Aretes/5.jpg" alt="Producto 2">
+            <h3>Aretes con forma de trebol</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de mariposas.</p>
+            <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Aretes forma de trebol" data-price="550">
+            <img src="IMG/Aretes/6.jpg" alt="Producto 2">
+            <h3>Aretes con forma de trebol</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de mariposas.</p>
+            <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Aretes forma de trebol" data-price="550">
+            <img src="IMG/Aretes/7.jpg" alt="Producto 2">
+            <h3>Aretes con forma de trebol</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de mariposas.</p>
+            <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Aretes forma de trebol" data-price="550">
+            <img src="IMG/Aretes/8.jpg" alt="Producto 2">
+            <h3>Aretes con forma de trebol</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de mariposas.</p>
+            <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
+        </div>
     </main>
 
     <script src="JS/JS.JS"></script>
