--- a/Cadenas.html
+++ b/Cadenas.html
@@ -168,6 +168,104 @@
             <p>Pulsera con diseño de Trevol.</p>
             <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
         </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/4.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/6.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/7.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/8.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/9.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/10.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/11.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/12.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/13.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/14.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/15.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/16.jpg" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        
     </main>
 
     <script src="JS/JS.JS"></script>
