--- a/Pulseras.html
+++ b/Pulseras.html
@@ -64,20 +64,36 @@
             <button onclick="addToCart('Pulsera para chicas mariposa', 550)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Pulceras para chica trebol" data-price="650">
             <img src="IMG/Pulseras/2.jpg" alt="Producto 2">
-            <h3>Pulseras para chicas trevol</h3>
+            <h3>Pulseras para chicas trebol</h3>
             <p>Precio: RD$650.00</p>
             <p>Pulsera con diseño de Trevol.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Pulsera para chicas trebol', 650)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Pulceras para chica trebol" data-price="650">
             <img src="IMG/Pulseras/3.jpg" alt="Producto 2">
-            <h3>Pulsera para chicas trevol</h3>
+            <h3>Pulsera para chicas trebol</h3>
             <p>Precio: RD$650.00</p>
             <p>Pulsera con diseño de Trevol.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Pulsera para chicas trebol negro', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/4.jpg" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/5.jpg" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
         </div>
     </main>
 
