--- a/Productos.html
+++ b/Productos.html
@@ -57,8 +57,8 @@
         </div>
         <div class="card" data-name="Cadenitas">
             <img src="IMG/Cadenas/1.jpg" alt="Producto 2">
-            <h3>Cadenitas</h3>
-            <p>Cadenitas con diferentes formas</p>
+            <h3>Cadenas</h3>
+            <p>Cadenas con diferentes formas</p>
             <a href="Cadenas.html"><button>Ver más</button></a>
         </div>
 
