--- a/Pulseras.html
+++ b/Pulseras.html
@@ -95,6 +95,78 @@
             <p>Pulsera con diseño de Trevol.</p>
             <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
         </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/8.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/9.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/10.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/11.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/12.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/13.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/14.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/15.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica" data-price="650">
+            <img src="IMG/Pulseras/16.png" alt="Producto 2">
+            <h3>Pulsera para chicas</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Pulsera para chicas', 650)">Agregar al carrito</button>
+        </div>
     </main>
 
     <script src="JS/JS.JS"></script>
