--- a/Sets.html
+++ b/Sets.html
@@ -79,6 +79,46 @@
             <p>Guillo con forma de flores blanco y negro.</p>
             <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
         </div>
+
+        <div class="card" data-name="Set" data-price="450">
+            <img src="IMG/Sets/5.png" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$450.00</p>
+            <p>Aretes y cadenas.</p>
+            <button onclick="addToCart('Sets', 450)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Set" data-price="650">
+            <img src="IMG/Sets/6.png" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Aretes y cadenas.</p>
+            <button onclick="addToCart('Sets', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Set" data-price="650">
+            <img src="IMG/Sets/7.png" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Aretes y cadenas.</p>
+            <button onclick="addToCart('Sets', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Set" data-price="650">
+            <img src="IMG/Sets/8.png" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$650.00</p>
+            <p>Aretes y cadenas perlas.</p>
+            <button onclick="addToCart('Sets', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Set" data-price="650">
+            <img src="IMG/Sets/9.png" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$650.00</p>
+            <p>2 collares y un par de aretes de perla.</p>
+            <button onclick="addToCart('Sets', 650)">Agregar al carrito</button>
+        </div>
     </main>
 
     <script src="JS/JS.JS"></script>
