--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Tienda Online/Cloffy.rd</title>
+
     <link rel="stylesheet" href="CSS/Css.css">
 </head>
 <body>
@@ -71,6 +74,9 @@
 
         </div>
     </main>
+
+    <button style="margin-left: 82%; margin-top: 10px;" class="w3-button w3-xlarge w3-circle w3-black">+</button>
+
 
     <script src="JS/JS.JS"></script>
 
