--- a/Cadenas.html
+++ b/Cadenas.html
@@ -265,6 +265,71 @@
             <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
         </div>
 
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/17.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/18.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/19.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/20.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/21.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/22.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/23.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/24.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
         
     </main>
 
