--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <a href="Argollas.html"><button>Ver más</button></a>
 
         </div>
-    </main>
+    </main> 
 
-    <button style="margin-left: 82%; margin-top: 10px;" class="w3-button w3-xlarge w3-circle w3-black">+</button>
+    <a href="Productos.html"><button style="margin-left: 82%; margin-bottom: 10%;" class="w3-button w3-xlarge w3-circle w3-black">+</button></a>
 
 
     <script src="JS/JS.JS"></script>
